--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,18 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity"
-    android:gravity="center">
+    android:background="@color/white"
+    android:gravity="center"
+    tools:context=".MainActivity">
 
     <androidx.viewpager2.widget.ViewPager2
-        android:id="@+id/vpHorizontal"
-        android:layout_width="400dp"
-        android:layout_height="200dp"
-        android:paddingStart="80dp"
+        android:id="@+id/view_pager_2"
+        android:layout_width="match_parent"
+        android:layout_height="300dp"
+        android:layout_centerInParent="true"
         android:orientation="horizontal"
-        android:paddingEnd="80dp"/>
+        android:paddingStart="50dp"
+        android:paddingEnd="50dp"/>
 
-</LinearLayout>
+</RelativeLayout>
